fix custom provider and profile security configs